--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "react-horizontal-scrolling-menu": "^3.2.0",
     "react-loader-spinner": "^5.1.7-beta.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
