env file added for api key

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_RAPID_API_KEY=4150acd9c3mshc2d15e52c099101p1f12a3jsnef8c679aeb1e
+REACT_APP_RAPID_API_YT_KEY=4150acd9c3mshc2d15e52c099101p1f12a3jsnef8c679aeb1e
